// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with visible expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    $5.50
  </h3>
</div>
`;

exports[`should render ExpensesSummary without visible expenses 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $0.01
  </h3>
</div>
`;
